# sbotify

./: .env_template  .gitignore  README.md  ^C  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml  chat-ci-cd.yml  check-changes.yml  dashboard-ci-cd.yml  deploy.yml  mcp-server-ci-cd.yml  render-plantuml.yml  tests.yml  workflow-base.yml
chat/: Dockerfile  pyproject.toml  run.sh
chat/src/: dependencies.py  lifespan.py  main.py  test.rest
chat/src/api/: tools.py
chat/src/backend/: lifespan.py  main.py
chat/src/backend/api/: __init__.py  chat.py  tools.py
chat/src/backend/services/: llm_service.py
chat/src/frontend/: index.html
chat/src/frontend/styles/: main.css
chat/src/ui/: __init__.py  chat.html  chat.py  chat_response_template.html  index.html  tools.html  tools.py
chat/tests/: conftest.py
chat/tests/api/: test_api_tools.py
chat/tests/ui/: test_ui_tools.py
dashboard/: Dockerfile  index.html  main.py  pyproject.toml  run.sh
dashboard/src/: index.html  main.py
dashboard/src/routers/: __init__.py  proxy_router.py
dashboard/test/routers/: test_proxy_router.py
dashboard/test/routers/proxy_router/: test_configuration.py  test_edge_cases.py  test_integration.py  test_proxy_core.py  test_url_rewriting.py
diagrams/: deployment.puml
mcp/: Dockerfile
mcp-client/: Dockerfile  client.py  pyproject.toml
mcp-server/: Dockerfile  client.py  cloudbuild.yaml  pyproject.toml  server.py  test_server.py
static/: styles.css
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  service_accounts_iam.tf  variables.tf
workflows/: render-plantuml.yml
