[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.2",
    "google-auth>=2.40.3",
    "google-genai>=1.33.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.15.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = "."
