[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio"
]

[tool.pytest.ini_options]
pythonpath = ["."]
